# fast-api-learning-by-testing

./: Makefile  app.py  pyproject.toml
routers/: __init__.py  documents.py  presentations.py  vehicles.py
tests/: conftest.py  test_app.py
tests/routers/: test_all_routes_is_reachable.py
