[tool.poetry]
name = "fast-api-matrix"
version = "0.1.0"
description = ""
authors = ["Sviatoslav Bobryshev <wstswsb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pudb = "^2024.1"
black = "^24.2.0"
httpx = "^0.27.0"
pytest = "^8.0.2"
websockets = "^12.0"
pytest-asyncio = "^0.23.5"
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
